fix: slogan index visible

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -31,6 +31,7 @@
 
   .slogan {
     position: absolute;
+    z-index: 999;
     right: 5%;
     bottom: 3%;
   }
